<resources>
    <string name="app_name">Project2</string>
    <string name="start_menu_buttonSensor">Sensor values</string>
    <string name="start_menu_buttonApi">Api values</string>
    <string name="start_menu_text">Where do you want to get your values from?</string>
    <string name="sensor_menu_headertext">Sensor values</string>
    <string name="not_available">Not available</string>
    <string name="temp_header">Temperature:</string>
    <string name="humidity_header">Humidity:</string>
    <string name="pressure_header">Pressure:</string>
    <string name="ApiPickerHeader">Choose how you want to download the api information</string>
    <string name="apiPickerAsynctask">AsyncTask</string>
    <string name="apiPickerVolley">Volley</string>
    <string name="header_api_values">API values</string>
    <string name="compare_values">Compare values</string>
    <string name="difference">Difference</string>
    <string name="temperature_difference">Temperature difference</string>
    <string name="humidity_difference">Humidity difference</string>
    <string name="pressure_difference">Pressure difference</string>
    <string name="your_altitude">Your altitude</string>
</resources>
